@@ -153,6 +153,7 @@
       <Unit17>
         <Filename Value="Test16.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <WindowIndex Value="1"/>
         <TopLine Value="120"/>
@@ -245,10 +246,9 @@
       </Unit27>
       <Unit28>
         <Filename Value="../IB.pas"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="10"/>
         <WindowIndex Value="1"/>
-        <TopLine Value="43"/>
+        <TopLine Value="79"/>
         <CursorPos X="2" Y="73"/>
         <UsageCount Value="21"/>
         <Loaded Value="True"/>
@@ -466,7 +466,7 @@
         <Loaded Value="True"/>
       </Unit56>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="Test10.pas"/>
         <Caret Line="62" TopLine="52"/>
@@ -579,13 +579,9 @@
         <Caret Line="184" TopLine="156"/>
       </Position28>
       <Position29>
-        <Filename Value="Test16.pas"/>
-        <Caret Line="16" Column="27" TopLine="134"/>
-      </Position29>
-      <Position30>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
         <Caret Line="5613" TopLine="5596"/>
-      </Position30>
+      </Position29>
     </JumpHistory>
   </ProjectSession>
   <Debugging>
